objects/Google_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>Average_Sale_Price__c</fullName>
        <inlineHelpText>The average price of your product. An average can be helpful if you occasionally apply discounts or alter pricing in other ways</inlineHelpText>
        <label>Average Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Time__c</fullName>
        <label>Avg Time in Seconds</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate__c</fullName>
        <label>Bounce Rate(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_or_ad_spend__c</fullName>
        <inlineHelpText>How much did you spend on creating and promoting the marketing campaign? Here, you can factor in costs including ad spend, hourly wages of people who put time into the project, or costs related to producing content.</inlineHelpText>
        <label>Cost or ad spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <label>Direct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEO__c</fullName>
        <label>GEO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_to_customer_rate__c</fullName>
        <formula>Leads_to_Sales__c / Number_of_leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What percentage of leads became a customer? If 12 out of 100 leads become a customer, your lead to customer rate would be 12% or 0.12.</inlineHelpText>
        <label>Lead-to-customer rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Leads_to_Close_Ratio__c</fullName>
        <formula>Closed__c /  Leads_to_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads to Close Ratio %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Leads_to_Sales__c</fullName>
        <label>Leads to Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_ROI_Formular__c</fullName>
        <formula>((Number_of_leads__c * Lead_to_customer_rate__c * Average_Sale_Price__c ) - (Cost_or_ad_spend__c ) /(Cost_or_ad_spend__c )) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(number of leads x lead-to-customer rate x average sales price) - (cost or ad spend) ÷ (cost or ad spend) x 100.</inlineHelpText>
        <label>Marketing ROI Formular</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <formula>MONTH( Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sessions__c</fullName>
        <label>No. of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_leads__c</fullName>
        <inlineHelpText>How many people converted to a lead?</inlineHelpText>
        <label>Number of leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_Search__c</fullName>
        <label>Organic Search</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Search__c</fullName>
        <inlineHelpText>Display + Paid Search</inlineHelpText>
        <label>Paid Search</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referal__c</fullName>
        <label>Referal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sherdah</fullName>
                </value>
                <value>
                    <fullName>Krishna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>Social</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Conver__c</fullName>
        <formula>Leads_to_Sales__c / Total_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Conversion%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Leads__c</fullName>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Users__c</fullName>
        <label>Total Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Users__c</fullName>
        <label>Unique Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google Analytic</label>
    <listViews>
        <fullName>All_Google_Analytics</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Google Analytics</label>
    </listViews>
    <nameField>
        <label>Google Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>